[gd_scene load_steps=12 format=2]

[ext_resource path="res://Element/Mobs/ghost.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprite/Moving/Ghost.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 12.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 112.001
height = 983.999

[node name="Ghost" type="Node2D"]
modulate = Color( 1, 1, 1, 0.588235 )
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 7 )

[node name="BumperArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BumperArea"]
position = Vector2( 0, 2 )
shape = SubResource( 8 )

[node name="DetectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
rotation = 1.57079
shape = SubResource( 9 )

[connection signal="body_entered" from="BumperArea" to="." method="_on_BumperArea_body_entered"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_DetectArea_body_exited"]
